--- a/web/big_shoes.css
+++ b/web/big_shoes.css
@@ -55,6 +55,11 @@ header {
     height: 20px;
 }
 
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 .main {
     display: flex;
     justify-content: center;
@@ -216,4 +221,146 @@ hr {
     justify-content: center;
     margin-bottom: 24px;
     margin-top: 18px;
+}
+
+@media screen and (max-width:375px) {
+
+    .header-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        max-width: 375px;
+        width: 100%;
+        align-items: center;
+    }
+
+    .header-links {
+        margin: 0px 0px 24px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tghd {
+        padding: 0px 24px 0px 0px;
+    }
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        margin: 24px 0px;
+    }
+
+    .logo__link {
+        display: flex;
+        justify-content: center;
+        width: 212px;
+    }
+
+    body {
+        max-width: 375px;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .card {
+        flex-direction: column;
+        margin: 32px 16px;
+        padding: 24px;
+        max-width: 295px;
+        width: 100%;
+        border-radius: 12px;
+    }
+
+    .image {
+        height: 172px;
+        align-self: stretch;
+    }
+
+    h2 {
+        color: var(--black, #121723);
+        font-family: Anonymous Pro;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%;
+    }
+
+    h3 {
+        color: var(--black, #121723);
+        font-family: Anonymous Pro;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 100%;
+    }
+
+    .text {
+        color: var(--black, #121723);
+        font-family: Anonymous Pro;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+    }
+
+    h4 {
+        color: var(--black, #121723);
+        font-family: Anonymous Pro;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .text__info {
+        color: var(--black, #121723);
+        font-family: Anonymous Pro;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+
+    .card__info {
+        flex-direction: column;
+    }
+
+    .footer {
+        max-width: 375px;
+        width: 100%;
+        height: auto;
+    }
+
+    .footer-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo-footer {
+        margin: 32px 0px;
+    }
+
+    .footer-links {
+        display: flex;
+        justify-content: center;
+        margin: 0px 0px 24px;
+
+    }
+
+    .tgf {
+        margin: 0px 24px 0px 0px;
+    }
+
+    hr {
+        margin: 0px 16px;
+    }
+
+    .footer-text {
+        padding: 24px 0px;
+        margin: 0px;
+    }
+
 }
