--- a/web/kros1.css
+++ b/web/kros1.css
@@ -30,7 +30,7 @@ header {
 .logo {
     width: 212.34px;
     height: 63.24px;
-    margin: 30.18px 0px 16.58px 142.52px;
+    padding: 30.18px 0px 16.58px 142.52px;
 }
 
 .header-links {
@@ -174,4 +174,103 @@ hr {
     justify-content: center;
     margin-bottom: 24px;
     margin-top: 18px;
+}
+
+@media screen and (max-width: 375px) {
+
+    .header-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        max-width: 375px;
+        width: 100%;
+        align-items: center;
+    }
+
+    .header-links {
+        margin: 0px 0px 24px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .tghd {
+        padding: 0px 24px 0px 0px;
+    }
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        margin: 24px 0px;
+    }
+
+    .logo__link {
+        display: flex;
+        justify-content: center;
+        width: 212px;
+    }
+
+    body {
+        max-width: 375px;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .footer {
+        max-width: 375px;
+        width: 100%;
+        height: auto;
+    }
+
+    .footer-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo-footer {
+        margin: 32px 0px;
+    }
+
+    .footer-links {
+        display: flex;
+        justify-content: center;
+        margin: 0px 0px 24px;
+
+    }
+
+    .tgf {
+        margin: 0px 24px 0px 0px;
+    }
+
+    hr {
+        margin: 0px 16px;
+    }
+
+    .footer-text {
+        padding: 24px 0px;
+        margin: 0px;
+    }
 }
